# xcorrFFT

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  simple.cpp  simple_ipp.cpp
include/: IppXcorrFFT.h  XcorrFFT.h
